fix art alignment

--- a/assets/css/art.scss
+++ b/assets/css/art.scss
@@ -20,6 +20,7 @@ $footer: #f7f7f7;
 
 .gallery {
   padding: 0 0 4rem 0;
+  float: none;
 }
 
 .container {
